重构: 更新命令处理器以支持图事件处理，新增 GraphEventCommandType 枚举以定义图事件命令类型，优化 WebSocketIntegrationTest 和相关扩展类，提升代码可读性和系统稳定性。